packages/yew-macro/tests/function_component_attr/bad-return-type-fail.stderr
error: function components must return `yew::Html` or `yew::HtmlResult`
 --> tests/function_component_attr/bad-return-type-fail.rs:9:1
  |
9 | fn comp_1(_props: &Props) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `u32: IntoHtmlResult` is not satisfied
  --> tests/function_component_attr/bad-return-type-fail.rs:11:1
   |
11 | #[function_component(Comp)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoHtmlResult` is not implemented for `u32`
   |
   = help: the following other types implement trait `IntoHtmlResult`:
             Result<VNode, RenderError>
             VNode
   = note: this error originates in the attribute macro `function_component` (in Nightly builds, run with -Z macro-backtrace for more info)
